fixed alignment of main content

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -34,6 +34,7 @@ main {
 .main-content {
   @media @desktop {
     .flexy(flex, row, null, center, center)
+    align-items: baseline;
   }
 }
 
